Fixed overflow on smaller screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,9 +79,12 @@ body {
 /* MEDIA QUERIES FOR NAV BAR*/
 
 @media (max-width:450px) {
+    html, body {
+        overflow-x: hidden;
+    }
     .logo {
         font-size: 16px;
-        margin-left: 20px;
+        margin-left: 10px;
         width: 200px;
     }
     .hamburger {
@@ -794,6 +797,7 @@ li:hover {
 @media (max-width:450px) {
     footer {
         height: 600px;
+        z-index: -1;
     }
     #foot-icon {
         position: absolute;
